<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textCategoria_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categ"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDescricao_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textColor="@color/dark_gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/textValor_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resu"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimaryReceita"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.cardview.widget.CardView>